# rusty_flasher_side

./: Cargo.toml  tracker.txt  tracker2.txt  tracker3.txt
src/: boot.rs  controller.rs  controller_degree.rs  controller_pulse.rs  find_tty_serialport.rs  generate_crc.rs  main.rs  monitor.rs  monitor2.rs  parse_invocation.rs  read_file.rs  test_crc.rs  test_echo.rs  test_send.rs  tty_echo_serialport.rs
