[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.2"
device_query = "2.1"
crossterm = "0.27"

[[bin]]
name = "bootloader"
path = "src/main.rs"

[[bin]]
name = "controller"
path = "src/controller.rs"

[[bin]]
name = "monitor"
path = "src/monitor.rs"

[[bin]]
name = "controller_pulse"
path = "src/controller_pulse.rs"

[[bin]]
name = "controller_degree"
path = "src/controller_degree.rs"
